[gd_scene load_steps=3 format=3 uid="uid://c1xh5rd7yfh8n"]

[ext_resource type="Script" path="res://scripts/ui/evidence_ui.gd" id="1_evidence"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.8, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="EvidenceUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_evidence")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
anchor_right = 0.3
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderPanel" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="CountLabel" type="Label" parent="Panel/VBoxContainer/HeaderPanel"]
layout_mode = 2
text = "Evidence: 0/0"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EvidenceList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Instructions" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Press [TAB] to close"
horizontal_alignment = 1